Updated init script

--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -37,7 +37,7 @@
     "cur = conn.cursor()\n",
     "\n",
     "sql_statements = []\n",
-    "with open('aurorapg.sql', 'r') as file:\n",
+    "with open('./sql/aurorapg.sql', 'r') as file:\n",
     "    # Split on semicolons but ignore empty statements\n",
     "    sql_statements = [stmt.strip() for stmt in file.read().split(';') if stmt.strip()]\n",
     "\n",
