Added env variables

--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -15,6 +15,35 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "bdd444de-795e-4761-a81c-81dd6cbb3dcd",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "PG_HOST = os.environ.get(\"PG_HOST\")\n",
+    "PG_SECRET_ARN = os.environ.get(\"PG_SECRET_ARN\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e5c3dc51-7bcd-4656-afdb-f0bb8d4fd165",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import json\n",
+    "if PG_SECRET_ARN:\n",
+    "    secret = boto3.client('secretsmanager').get_secret_value(SecretId=PG_SECRET_ARN)\n",
+    "    PWD = json.loads(secret['SecretString'])['password']\n",
+    "    print(PWD)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "07005da3-7fa0-419c-9df3-7924cd926a58",
    "metadata": {
     "tags": []
@@ -27,8 +56,8 @@
     "conn = psycopg2.connect(\n",
     "    user='postgres',\n",
     "    dbname='postgres',\n",
-    "    password='e8?NbW04<bU.slwnW#V1l6i.ACZZ',\n",
-    "    host='demo-cluster.cluster-ce1ecq2wsf1v.us-east-1.rds.amazonaws.com',\n",
+    "    password=PWD,\n",
+    "    host=PG_HOST, #'demo-cluster.cluster-{id}.{region}.rds.amazonaws.com'\n",
     "    port='5432'\n",
     ")\n",
     "\n",
