--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -9,7 +9,7 @@
    },
    "outputs": [],
    "source": [
-    "pip install psycopg2"
+    "#pip install psycopg2"
    ]
   },
   {
@@ -23,22 +23,9 @@
    "source": [
     "import os\n",
     "PG_HOST = os.environ.get(\"PG_HOST\")\n",
-    "PG_SECRET_ARN = os.environ.get(\"PG_SECRET_ARN\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e5c3dc51-7bcd-4656-afdb-f0bb8d4fd165",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import boto3\n",
-    "import json\n",
-    "if PG_SECRET_ARN:\n",
-    "    secret = boto3.client('secretsmanager').get_secret_value(SecretId=PG_SECRET_ARN)\n",
-    "    PWD = json.loads(secret['SecretString'])['password']\n",
-    "    print(PWD)"
+    "PG_SECRET_ARN = os.environ.get(\"PG_SECRET_ARN\")\n",
+    "PG_PWD = os.environ.get(\"PG_PWD\")\n",
+    "#print(PG_PWD)"
    ]
   },
   {
@@ -56,7 +43,7 @@
     "conn = psycopg2.connect(\n",
     "    user='postgres',\n",
     "    dbname='postgres',\n",
-    "    password=PWD,\n",
+    "    password='CUOVemiYGnxq?Qsjugn[?Go)(*2A',#PG_PWD,\n",
     "    host=PG_HOST, #'demo-cluster.cluster-{id}.{region}.rds.amazonaws.com'\n",
     "    port='5432'\n",
     ")\n",
@@ -90,28 +77,36 @@
    "outputs": [],
    "source": [
     "import boto3\n",
+    "import random\n",
     "\n",
     "# Initialize DynamoDB client\n",
     "dynamodb = boto3.resource('dynamodb')\n",
     "\n",
     "table_name = 'invoices'\n",
-    "print(f'Starting to seed table: {table_name}')\n",
     "table = dynamodb.Table(table_name)\n",
     "\n",
     "# Items to add\n",
-    "items = [\n",
-    "    {'customer_id': '1', 'invoice_number': 'INV-001', 'total': '200'},\n",
-    "    {'customer_id': '2', 'invoice_number': 'INV-002', 'total': '200'},\n",
-    "    {'customer_id': '3', 'invoice_number': 'INV-003', 'total': '200'},\n",
-    "    {'customer_id': '4', 'invoice_number': 'INV-004', 'total': '200'},\n",
-    "    {'customer_id': '6', 'invoice_number': 'INV-005', 'total': '200'}\n",
-    "]\n",
+    "items = []\n",
+    "for i in range(1, 50):\n",
+    "    # Generate random invoice number\n",
+    "    random_num = random.randint(1000, 9999)\n",
+    "    invoice_number = f\"INV_{random_num}\"\n",
+    "\n",
+    "    # Generate random total between 100 and 1000\n",
+    "    total = random.randint(100, 1000)\n",
+    "\n",
+    "    # Create and append the item\n",
+    "    items.append({\n",
+    "        'customer_id': i,\n",
+    "        'invoice_number': invoice_number,\n",
+    "        'total': total\n",
+    "    })\n",
     "\n",
     "# Use batch_writer for better performance\n",
     "with table.batch_writer() as batch:\n",
     "    for item in items:\n",
     "        batch.put_item(Item=item)\n",
-    "        print(f'Added item with customer_id: {item[\"customer_id\"]}')"
+    "        #print(f'Added item with customer_id: {item}')"
    ]
   }
  ],
