--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -43,7 +43,7 @@
     "conn = psycopg2.connect(\n",
     "    user='postgres',\n",
     "    dbname='postgres',\n",
-    "    password='CUOVemiYGnxq?Qsjugn[?Go)(*2A',#PG_PWD,\n",
+    "    password='xyz',#PG_PWD,\n",
     "    host=PG_HOST, #'demo-cluster.cluster-{id}.{region}.rds.amazonaws.com'\n",
     "    port='5432'\n",
     ")\n",
