--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -24,8 +24,25 @@
     "import os\n",
     "PG_HOST = os.environ.get(\"PG_HOST\")\n",
     "PG_SECRET_ARN = os.environ.get(\"PG_SECRET_ARN\")\n",
-    "PG_PWD = os.environ.get(\"PG_PWD\")\n",
-    "#print(PG_PWD)"
+    "#print(PG_SECRET_ARN)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7b74993-3e8c-43cf-8967-b49953deee34",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import boto3\n",
+    "import json\n",
+    "\n",
+    "client = boto3.client('secretsmanager')\n",
+    "response = client.get_secret_value(SecretId=PG_SECRET_ARN)\n",
+    "database_secrets = json.loads(response['SecretString'])\n",
+    "pwd = database_secrets['password']"
    ]
   },
   {
@@ -43,7 +60,7 @@
     "conn = psycopg2.connect(\n",
     "    user='postgres',\n",
     "    dbname='postgres',\n",
-    "    password='xyz',#PG_PWD,\n",
+    "    password=pwd,\n",
     "    host=PG_HOST, #'demo-cluster.cluster-{id}.{region}.rds.amazonaws.com'\n",
     "    port='5432'\n",
     ")\n",
