minor fixes of the data model

--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -24,7 +24,7 @@
     "import os\n",
     "PG_HOST = os.environ.get(\"PG_HOST\")\n",
     "PG_SECRET_ARN = os.environ.get(\"PG_SECRET_ARN\")\n",
-    "#print(PG_SECRET_ARN)"
+    "print(PG_SECRET_ARN)"
    ]
   },
   {
@@ -43,6 +43,18 @@
     "response = client.get_secret_value(SecretId=PG_SECRET_ARN)\n",
     "database_secrets = json.loads(response['SecretString'])\n",
     "pwd = database_secrets['password']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8e9f09a2-99af-4443-807a-23cf5fd615ce",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "print(pwd)"
    ]
   },
   {
@@ -104,18 +116,24 @@
     "\n",
     "# Items to add\n",
     "items = []\n",
-    "for i in range(1, 50):\n",
+    "for i in range(1, 101):\n",
+    "    # Generate random within a range\n",
+    "    order_id = random.randint(10248, 11077)\n",
+    "\n",
     "    # Generate random invoice number\n",
     "    random_num = random.randint(1000, 9999)\n",
     "    invoice_number = f\"INV_{random_num}\"\n",
     "\n",
-    "    # Generate random total between 100 and 1000\n",
-    "    total = random.randint(100, 1000)\n",
+    "    # Generate random total between 100 and 10000\n",
+    "    total = random.randint(100, 10000)\n",
+    "\n",
+    "    status = random.choice(['DRAFT', 'SUBMITTED', 'AUTHORISED', 'PAID', 'VOIDED'])\n",
     "\n",
     "    # Create and append the item\n",
     "    items.append({\n",
-    "        'customer_id': i,\n",
+    "        'order_id': order_id,\n",
     "        'invoice_number': invoice_number,\n",
+    "        'status': status,\n",
     "        'total': total\n",
     "    })\n",
     "\n",
@@ -123,8 +141,16 @@
     "with table.batch_writer() as batch:\n",
     "    for item in items:\n",
     "        batch.put_item(Item=item)\n",
-    "        #print(f'Added item with customer_id: {item}')"
+    "        print(f'Added item: {item}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "674eb5a8-bf0b-461f-91a7-db6d9e1e7726",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
