update libs; fix parameter decs

--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -48,18 +48,6 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "8e9f09a2-99af-4443-807a-23cf5fd615ce",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "print(pwd)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
    "id": "07005da3-7fa0-419c-9df3-7924cd926a58",
    "metadata": {
     "tags": []
@@ -106,7 +94,7 @@
    "outputs": [],
    "source": [
     "import boto3\n",
-    "import random\n",
+    "import secrets\n",
     "\n",
     "# Initialize DynamoDB client\n",
     "dynamodb = boto3.resource('dynamodb')\n",
@@ -117,17 +105,21 @@
     "# Items to add\n",
     "items = []\n",
     "for i in range(1, 101):\n",
-    "    # Generate random within a range\n",
-    "    order_id = random.randint(10248, 11077)\n",
+    "    # Generate random within a range (10248, 11077)\n",
+    "    range_size = 11077 - 10248 + 1\n",
+    "    order_id = 10248 + secrets.randbelow(range_size)\n",
     "\n",
-    "    # Generate random invoice number\n",
-    "    random_num = random.randint(1000, 9999)\n",
+    "    # Generate random invoice number (1000, 9999)\n",
+    "    random_num = secrets.randbelow(1000000)  # Adjust the range as needed\n",
     "    invoice_number = f\"INV_{random_num}\"\n",
     "\n",
     "    # Generate random total between 100 and 10000\n",
-    "    total = random.randint(100, 10000)\n",
+    "    range_size_total = 10000 - 100 + 1\n",
+    "    total = 100 + secrets.randbelow(range_size_total)\n",
     "\n",
-    "    status = random.choice(['DRAFT', 'SUBMITTED', 'AUTHORISED', 'PAID', 'VOIDED'])\n",
+    "    # For status\n",
+    "    statuses = ['DRAFT', 'SUBMITTED', 'AUTHORISED', 'PAID', 'VOIDED']\n",
+    "    status = statuses[secrets.randbelow(len(statuses))]\n",
     "\n",
     "    # Create and append the item\n",
     "    items.append({\n",
