Updated visuals and CF

--- a/InitDataSources.ipynb
+++ b/InitDataSources.ipynb
@@ -1,6 +1,24 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "id": "1232c32c-fde4-4e8d-ae1f-e276b5486c88",
+   "metadata": {},
+   "source": [
+    "# Demo Data Model\n",
+    "\n",
+    "![Demo Data Model](visuals/DemoDataModel.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4caa4462-0cb8-4164-85f1-225596f3b233",
+   "metadata": {},
+   "source": [
+    "# Populate Customer Data in Amazon Aurora PostgreSQL"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "1d6bc948-a4e2-4d42-9a1b-b28070deeb88",
@@ -85,6 +103,14 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "4f68d90c-5408-4d53-bac1-53d6b07298c8",
+   "metadata": {},
+   "source": [
+    "# Generate Financial Data (invoices) in Amazon DynamoDB "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "id": "631f6eb3-aeec-4ed6-828a-dba4e919d20f",
@@ -135,14 +161,6 @@
     "        batch.put_item(Item=item)\n",
     "        print(f'Added item: {item}')"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "674eb5a8-bf0b-461f-91a7-db6d9e1e7726",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
